add page controller for static pages, add some bootstrap to products#index view

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,25 +4,27 @@
     <title>Restaurant</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&family=Roboto+Slab:wght@800&family=Russo+One&display=swap" rel="stylesheet">  
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-<% if current_user.nil? %>
-<% else %>
-	<%= link_to rails_admin_path, class: 'login-button' do %>Go to App<% end %>
-	<%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
-<% end %>
-  <% unless flash.empty? %>
-    <script type="text/javascript">
-        <% flash.each do |f| %>
-      <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
-      toastr['<%= type %>']('<%= f[1] %>');
+  <%= render partial: "layouts/navbar" %>
+  <div class="container">
+    <% if current_user.nil? %>
+    <% else %>
+      <%= link_to rails_admin_path, class: 'login-button' do %>Go to App<% end %>
+      <%= link_to destroy_user_session_path, method: :delete do %>Log out<% end %>
     <% end %>
-    </script>
-  <% end %>
+    <% unless flash.empty? %>
+      <script type="text/javascript">
+        <% flash.each do |f| %>
+          <% type = f[0].to_s.gsub('alert', 'error').gsub('notice', 'info') %>
+          toastr['<%= type %>']('<%= f[1] %>');
+        <% end %>
+      </script>
+    <% end %>
     <%= yield %>
   </body>
 </html>
